baml_language/crates/baml_tests/snapshots/compiles/stream_crossfile/baml_tests__compiles__stream_crossfile__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 17910
---
=== HIR2 ===
class user.Education {
  school: string
  degree: user.Degree
  year: int
}
enum user.Degree {Bachelors, Masters, PhD}
type user.EducationList = user.Education[]
class user.Resume {
  name: string
  education: user.Education[]
  highest_degree: user.Degree
  aliases: user.EducationList
}
