baml_language/crates/baml_tests/snapshots/compiles/stream_crossfile/baml_tests__compiles__stream_crossfile__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 29309
---
=== PPIR ===
class user.Education {
  school: string
  degree: user.Degree
  year: int
}
class user.Education$stream {
  school: string | null
  degree: user.Degree | null
  year: int | null
}
enum user.Degree {Bachelors, Masters, PhD}
type user.EducationList = user.Education[]
type user.EducationList$stream = user.Education$stream[]
class user.Resume {
  name: string
  education: Education[]
  highest_degree: Degree
  aliases: EducationList
}
class user.Resume$stream {
  name: string | null
  education: Education$stream[]
  highest_degree: Degree | null
  aliases: Education$stream[]
}
