baml_language/crates/baml_tests/snapshots/compiles/stream_crossfile/baml_tests__compiles__stream_crossfile__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Education {
  school: string
  degree: user.Degree
  year: int
}
enum user.Degree
type user.EducationList = user.Education[]
class user.Education$stream {
  school: null | string
  degree: null | user.Degree
  year: null | int
}
type user.EducationList$stream = user.Education$stream[]
class user.Resume {
  name: string
  education: user.Education[]
  highest_degree: user.Degree
  aliases: user.EducationList
}
class user.Resume$stream {
  name: null | string
  education: user.Education$stream[]
  highest_degree: null | user.Degree
  aliases: user.Education$stream[]
}
