baml_language/crates/baml_tests/snapshots/compiles/stream_crossfile/baml_tests__compiles__stream_crossfile__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 18045
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
